--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ h3{
 
 
 a.btn{
-    background: var(--pink); 
+    background: var(--blue); 
     color: var(--dark-purple); 
     font-family: 'Oswald',sans-serif;
     font-size:30px;
@@ -86,6 +86,14 @@ a.btn{
     margin-left: auto;
     margin-right: auto;
     width:400px;
+}
+
+.logo-img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width:80%;
+    padding-bottom: 10px;
 }
 
 .center-text{
