--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,13 @@ a.btn{
     padding-bottom: 10px;
 }
 
+.center-img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width:80%
+}
+
 .center-text{
     text-align: center;
 }
@@ -103,13 +110,11 @@ a.btn{
 .column{
     width:48%;
     padding:2px;
-    float: left;
 }
 
 .col-3{
     width: 30%;
-    margin:1.5%;
-    float:left;
+    padding:2px;
 }
 
 .spacer{
