--- a/css/main.css
+++ b/css/main.css
@@ -109,12 +109,12 @@ a.btn{
 
 .column{
     width:48%;
-    padding:2px;
+    padding:5px;
 }
 
 .col-3{
-    width: 30%;
-    padding:2px;
+    width: 32%;
+    padding: 5px 2px;
 }
 
 .spacer{
