--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ footer{
 }
 
 a,p,ul,li,tr,td{
-    font-family:'Oswald', sans-serif;
+    font-family:'Merriweather', sans-serif;
     color:var(--dark-purple);
 }
 table{
@@ -54,12 +54,12 @@ h1{
     color: var(--dark-purple);
 }
 h2{
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Merriweather', sans-serif;
     font-size: 40px;
     color: var(--dark-purple); 
 }
 h3{
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Merriweather', sans-serif;
     font-size: 25px;
     color: var(--dark-purple); 
 }
@@ -68,8 +68,8 @@ h3{
 a.btn{
     background: var(--blue); 
     color: var(--dark-purple); 
-    font-family: 'Oswald',sans-serif;
-    font-size:30px;
+    font-family: 'Merriweather',sans-serif;
+    font-size:25px;
     padding: 8px 12px; 
     border: 0px; 
     -webkit-box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;
