--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ footer{
 }
 
 a,p,ul,li,tr,td{
-    font-family:'Merriweather', serif;
+    font-family:'Cormorant Garamond', serif;
     color:var(--dark-purple);
 }
 table{
@@ -54,12 +54,12 @@ h1{
     color: var(--dark-purple);
 }
 h2{
-    font-family: 'Merriweather', serif;
+    font-family: 'Cormorant Garamond', serif;
     font-size: 40px;
     color: var(--dark-purple); 
 }
 h3{
-    font-family: 'Merriweather', serif;
+    font-family: 'Cormorant Garamond', serif;
     font-size: 25px;
     color: var(--dark-purple); 
 }
@@ -68,7 +68,7 @@ h3{
 a.btn{
     background: var(--blue); 
     color: var(--purple); 
-    font-family: 'Merriweather',serif;
+    font-family: 'Cormorant Garamond',serif;
     font-size:25px;
     padding: 8px 12px; 
     border: 0px; 
@@ -104,10 +104,12 @@ a.btn{
 }
 
 .caption{
-    font-family: 'Merriweather',serif;
-    font-size: 14px;
+    font-family: 'Cormorant Garamond',serif;
+    font-size: 16px;
     color: var(--pink);
     text-align: center;
+    font-weight: 700;
+    font-style: normal;
 }
 
 .center-text{
