--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ html{
 body{
     /* Full height */
     height: 100%; 
-    background-image: url("../img/falin.jpeg");
+    background-image: url("../img/background-graphic.gif");
 }
 
 .page-container{
