--- a/css/main.css
+++ b/css/main.css
@@ -117,14 +117,19 @@ a.btn{
 }
 
 .column{
-    width:48%;
-    padding:5px;
+    width:49%;
+    padding: 3px;
     float:left;
 }
 
 .col-3{
-    width: 32%;
-    padding: 5px 2px;
+    width: 33%;
+    padding: 1px;
+    float:left;
+}
+
+.col-1{
+    width:100%;
 }
 
 .spacer{
