--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ a.btn{
     color: var(--purple); 
     font-family: 'Cormorant Garamond',serif;
     font-size:25px;
-    padding: 8px 12px; 
+    padding: 8px 12px;
     border: 0px; 
     -webkit-box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;
     -moz-box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;
@@ -142,4 +142,5 @@ a.btn{
 
 .horizontal li{
     float: left;
+    margin:auto;
 }
